# toggle-mode-widget

./: README.md  package-lock.json  package.json
src/: App.css  App.jsx  TitleBar.css  TitleBar.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
